--- a/src/components/GenericButton.css
+++ b/src/components/GenericButton.css
@@ -22,7 +22,7 @@
 }
 
 .generic-button-label {
-    font-size: 50px;
+    font-size: 40px;
     text-align: center;
 }
 
